--- a/templates/add_item.html
+++ b/templates/add_item.html
@@ -125,7 +125,7 @@
       </div>
     </div>
 
-    <div class="d-flex justify-content-center align-items-center mt-3 small-actions">
+    <div class="d-flex justify-content-center align-items-center mt-3 gap-2 small-actions">
       <button type="submit" class="btn btn-primary btn-sm px-4">Save</button>
       <a href="{{ url_for('records.records') }}" class="btn btn-outline-secondary btn-sm px-3">Cancel</a>
     </div>
